# timereg

./: .gitignore  .pre-commit-config.yaml  .timereg.toml  .timetracker.toml  CLAUDE.md  LICENSE  README.md  TIMEREG_SKILL.md  pyproject.toml
docs/plan/: DESIGN.md  TEST_SCENARIOS.md
docs/plans/: 2026-02-26-phase1-core-mvp-design.md  2026-02-26-phase1-implementation.md  2026-02-26-phase2-implementation.md  2026-02-26-phase2-reporting-design.md
src/timereg/: __init__.py  __main__.py
src/timereg/cli/: __init__.py  app.py  check.py  delete.py  edit.py  export.py  fetch.py  init.py  interactive.py  list_cmd.py  projects.py  register.py  skill.py  status.py  summary.py  undo.py
src/timereg/core/: checks.py  config.py  database.py  entries.py  export.py  git.py  models.py  projects.py  reports.py  split.py  time_parser.py
src/timereg/data/: SKILL.md
src/timereg/migrations/: 001_initial.sql  002_add_budget_and_tags.sql
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: sample_config.toml  sample_global_config.toml
tests/integration/: test_cli_check.py  test_cli_edit_delete.py  test_cli_export.py  test_cli_fetch.py  test_cli_init.py  test_cli_interactive.py  test_cli_list.py  test_cli_projects.py  test_cli_register.py  test_cli_skill.py  test_cli_status.py  test_cli_summary.py
tests/unit/: test_checks.py  test_config.py  test_database.py  test_entries.py  test_export.py  test_git.py  test_models.py  test_projects.py  test_reports.py  test_split.py  test_time_parser.py
