[project]
name = "timereg"
version = "0.1.0"
description = "Git-aware time tracking for developers"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "JPro Consulting" }]

dependencies = [
    "typer>=0.15",
    "rich>=14.0",
    "platformdirs>=4.0",
    "pydantic>=2.12",
]

[project.scripts]
timereg = "timereg.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timereg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=timereg --cov-report=term-missing --no-header -q"

[tool.coverage.run]
source = ["timereg"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["typer.*", "rich.*"]
implicit_reexport = true
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
